[package]
name = "redis-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio = "1.9.2"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
redis = { version = "0.22.3", features = [ "cluster"] }
clap = "4"

#[dependencies.redis]
#git = "https://github.com/redis-rs/redis-rs.git"
